--- a/package.json
+++ b/package.json
@@ -5,25 +5,47 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.24.50",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-manifest": "^2.4.24",
-    "gatsby-plugin-offline": "^3.2.24",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.28",
-    "gatsby-source-filesystem": "^2.3.25",
-    "gatsby-transformer-sharp": "^2.5.13",
+    "@apollo/client": "^3.2.5",
+    "apollo-boost": "^0.4.7",
+    "axios": "^0.19.2",
+    "gatsby": "^2.26.1",
+    "gatsby-cli": "^2.12.67",
+    "gatsby-image": "^2.4.14",
+    "gatsby-plugin-apollo": "^3.0.2",
+    "gatsby-plugin-apollo-shopify": "^1.0.2",
+    "gatsby-plugin-manifest": "^2.2.41",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-shopify-buy": "0.0.2",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-source-graphql": "^2.8.0",
+    "gatsby-source-shopify": "^3.2.19",
+    "gatsby-transformer-sharp": "^2.3.14",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "local-storage": "^2.0.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^5.2.1",
+    "shopify-buy": "^2.9.0",
+    "styled-components": "^4.4.1"
   },
+
   "devDependencies": {
     "prettier": "2.1.0"
   },
   "keywords": [
     "gatsby"
   ],
+  
+  "resolutions": {
+    "styled-components": "^5"
+  },
+
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
