--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "gatsby-transformer-sharp": "^2.3.14",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "html-react-parser": "^0.14.2",
     "local-storage": "^2.0.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-html-parser": "^2.0.2",
     "react-spring": "^8.0.27",
     "shopify-buy": "^2.9.0",
     "styled-components": "^4.4.1"
