--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@apollo/client": "^3.2.5",
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
     "gatsby-cli": "^2.12.67",
     "gatsby-image": "^2.4.14",
@@ -19,6 +20,7 @@
     "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-plugin-shopify-buy": "0.0.2",
+    "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-source-graphql": "^2.8.0",
     "gatsby-source-shopify": "^3.2.19",
